--- a/package.json
+++ b/package.json
@@ -9,15 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.1",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.12",
     "@react-google-maps/api": "^2.16.0",
     "@types/node": "18.11.9",
+    "@types/nodemailer": "^6.4.6",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
+    "@types/react-lottie": "^1.2.6",
+    "lottie-react": "^2.3.1",
     "next": "13.0.2",
+    "nodemailer": "^6.8.0",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.8.4",
