--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.12",
     "@react-google-maps/api": "^2.16.0",
+    "@sanity/block-content-to-react": "^3.0.0",
     "@types/node": "18.11.9",
     "@types/nodemailer": "^6.4.6",
     "@types/react": "18.0.25",
