--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@types/node": "18.11.9",
     "@types/nodemailer": "^6.4.6",
     "@types/react": "18.0.25",
-    "@types/react-dom": "18.0.8",
+    "@types/react-dom": "^18.0.10",
     "@types/react-lottie": "^1.2.6",
     "lottie-react": "^2.3.1",
     "next": "13.0.2",
