--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,5 +21,8 @@
     "**/*.tsx",
     "components/location-item"
   ],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"],
+  "files": [
+    "@types/block-content-to-react.d.ts"
+  ],
 }
