--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@apollo/client": "^3.7.1",
@@ -23,6 +24,7 @@
     "@types/react-lottie": "^1.2.6",
     "lottie-react": "^2.3.1",
     "next": "13.0.2",
+    "next-sitemap": "^3.1.49",
     "nodemailer": "^6.8.0",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
