--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-responsive-carousel": "^3.2.23",
     "sharp": "^0.32.1",
     "typescript": "4.8.4",
     "use-places-autocomplete": "^4.0.0"
