--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react": "18.0.25",
     "@types/react-dom": "^18.0.10",
     "@types/react-lottie": "^1.2.6",
+    "add-to-calendar-button-react": "^2.4.3",
     "lottie-react": "^2.3.1",
     "next": "13.0.2",
     "next-sitemap": "^3.1.49",
