--- a/package.json
+++ b/package.json
@@ -31,8 +31,13 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-responsive-carousel": "^3.2.23",
+    "react-slick": "^0.29.0",
     "sharp": "^0.32.1",
+    "slick-carousel": "^1.8.1",
     "typescript": "4.8.4",
     "use-places-autocomplete": "^4.0.0"
+  },
+  "devDependencies": {
+    "@types/react-slick": "^0.23.10"
   }
 }
